# Voice---agent

./: .env.example  FLOW.md  README.md  app.py  pyproject.toml  requirements.txt  run.py
backend/agents/: execution_agent.py  intent_agent.py  stt_agent.py
backend/tools/: code_tools.py  file_tools.py
frontend/: index.html  main.js  style.css
output/: .gitkeep
